Fix : Resolve and imporve layout component [전종우] - change Layout,  Header, Footer component html element and css - increase footer tab readability - add scroll bar y-axis default

--- a/damul-client/src/index.css
+++ b/damul-client/src/index.css
@@ -123,4 +123,5 @@
 
 html {
   font-family: "SUITE-Regular";
+  overflow-y: scroll;
 }
